--- a/NuGet.config
+++ b/NuGet.config
@@ -1,1 +1,7 @@
-
+<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+  <packageSources>
+    <add key="AzureArtifacts" value="https://pkgs.dev.azure.com/homesengland/_packaging/homesengland/nuget/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+  </packageSources>
+</configuration>
